# raylib-media

./: CMakeLists.txt  README.md
CMakeModules/: FindFFMPEG.cmake  FindRAYLIB.cmake
examples/: CMakeLists.txt  common.h  example_01_basics.c
examples/media/: CMakeLists.txt  example_01_basics.c  example_04_custom_stream.c
src/: raymedia.h  rmedia.c
